Words removed form css, refs #3

--- a/views/template/home.twig
+++ b/views/template/home.twig
@@ -15,6 +15,7 @@
             <div id="build">
                 <form id="target" class="form-horizontal empty">
                     <fieldset>
+                        Drop items here
                     </fieldset>
                 </form>
             </div>
