--- a/web/css/style.css
+++ b/web/css/style.css
@@ -43,18 +43,25 @@ textarea {
 }
 #target.empty {
 	background: rgba(0, 0, 0, 0.2);
-	position: relative;
+	height: 200px;
+	text-align: center;
 }
 #target.empty:before {
+	content: '';
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
+	margin-right: -0.25em; /* Adjusts for spacing */
+}
+
+#target.empty fieldset {
 	color: #ffffff;
-	content: "Drop items here";
+	display: inline-block;
 	font-size: 36px;
 	font-weight: bold;
-	left: 140px;
-	position: absolute;
-	text-align: center;
-	top: 80px;
+	vertical-align: middle;
 }
+
 #target .component {
 	border: 1px solid #fff;
 }
