--- a/web/css/style.css
+++ b/web/css/style.css
@@ -23,7 +23,7 @@ textarea {
 
 .help-block {
 	display: block;
-	margin-top: 5px;
+	margin-top: 5px !important;
 	margin-bottom: 0;
 	color: #999999;
 }
