--- a/views/layout/base.twig
+++ b/views/layout/base.twig
@@ -22,6 +22,14 @@
 </head>
 <body>
     {% block header %}
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=176724122396945";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
         <div class="hero-unit">
             <div class="container">
                 <h1>Freeformz</h1>
@@ -32,7 +40,18 @@
     <div class="container">
         {% block content %}{% endblock %}
     </div>
-    {% block footer %}{% endblock %}
+    {% block footer %}
+        <div class="container">
+            <footer>
+                <div class="page-header"></div>
+                <div class="pull-right">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="pixelcookers" data-related="moalmeyer" data-hashtags="pixelcookers">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                    <div class="fb-like" style="top: -2px" data-href="http://www.freeformz.net" data-send="true" data-layout="button_count" data-width="150" data-show-faces="false"></div>
+                </div>
+                <p>&copy; <a href="http://www.pixel-cookers.com">Pixel Cookers</a> and <a href="http://www.ludovicmeyer.com">Ludovic Meyer</a> 2013</p>
+            </footer>
+        </div>
+    {% endblock %}
     {% block footer_js %}{% endblock %}
 </body>
 </html>
