--- a/views/template/home.twig
+++ b/views/template/home.twig
@@ -10,12 +10,12 @@
     <div class="row clearfix">
     <div class="span6">
         <div class="clearfix">
-            <h2>Your Form</h2>
+            <h2>Create your Form</h2>
             <hr>
             <div id="build">
                 <form id="target" class="form-horizontal empty">
                     <fieldset>
-                        Drop items here
+                        Drop fields here
                     </fieldset>
                 </form>
             </div>
