Better error display on non html5 browsers

--- a/views/template/home.twig
+++ b/views/template/home.twig
@@ -55,7 +55,7 @@
             <!-- Text input-->
             <label class="control-label valtype" for="input01" data-valtype='label'>Text input</label>
             <div class="controls">
-                <input type="text" placeholder="placeholder" class="input-xlarge valtype" data-valtype="placeholder" >
+                <input type="text" placeholder="placeholder" class="valtype" data-valtype="placeholder" >
                 <p class="help-block valtype" data-valtype='help'>Supporting help text</p>
             </div>
         </div>
@@ -78,7 +78,7 @@
             <!-- Email input-->
             <label class="control-label valtype" for="input01" data-valtype='label'>Email input</label>
             <div class="controls">
-                <input type="email" placeholder="example@domain.tld" class="input-xlarge valtype" data-valtype="placeholder" >
+                <input type="email" placeholder="example@domain.tld" class="valtype" data-valtype="placeholder" >
                 <p class="help-block valtype" data-valtype='help'>Supporting help text</p>
             </div>
         </div>
@@ -100,7 +100,7 @@
             <!-- Url input-->
             <label class="control-label valtype" for="input01" data-valtype='label'>Url input</label>
             <div class="controls">
-                <input type="url" placeholder="http://www.domain.com" class="input-xlarge valtype" data-valtype="placeholder" >
+                <input type="url" placeholder="http://www.domain.com" class="valtype" data-valtype="placeholder" >
                 <p class="help-block valtype" data-valtype='help'>Supporting help text</p>
             </div>
         </div>
@@ -126,7 +126,7 @@
             <div class="controls">
                 <div class="input-prepend">
                     <span class="add-on valtype" data-valtype="prepend">^_^</span>
-                    <input class="span2 valtype" placeholder="placeholder" id="prependedInput" type="text" data-valtype="placeholder">
+                    <input class="valtype" placeholder="placeholder" id="prependedInput" type="text" data-valtype="placeholder">
                 </div>
                 <p class="help-block valtype" data-valtype="help">Supporting help text</p>
             </div>
@@ -153,7 +153,7 @@
             <label class="control-label valtype" data-valtype="label">Appended text</label>
             <div class="controls">
                 <div class="input-append">
-                    <input class="span2 valtype" data-valtype="placeholder" placeholder="placeholder" type="text">
+                    <input class="valtype" data-valtype="placeholder" placeholder="placeholder" type="text">
                     <span class="add-on valtype" data-valtype="append">^_^</span>
                 </div>
                 <p class="help-block valtype" data-valtype="help">Supporting help text</p>
