--- a/views/template/form.twig
+++ b/views/template/form.twig
@@ -2,12 +2,12 @@
 
 {% block content %}
     <form action="/form/{{ code }}/{{ hash }}" method="post" class="form-horizontal">
+        {{ form_errors(form) }}
         {% for key,field in form if 'hidden' not in field.all['block_prefixes'] %}
-            <div class="control-group">
+            <div class="control-group {% if field.vars.errors|length > 0 %}error{% endif %}">
                 {{ form_label(field, null, { 'label_attr': {'class': 'control-label'}}) }}
                 <div class="controls">
                     {% set attr = field.all['attr'] %}
-                    {{ form_errors(field) }}
 
                     {% if (attr['add-on'] is defined) and (attr['add-on'] != '') %}
                         <div class="input-{{ attr['add-on'] }}">
