Correct some URLs, fixes #11

--- a/views/email/contact.twig
+++ b/views/email/contact.twig
@@ -17,6 +17,6 @@
     Sender IP : {{ ip }}
     <br />
     <br />
-    You are receiving this e-mail message because you have registered a contact form at <a href="http://www.freeformz.com">www.freeformz.com</a>
+    You are receiving this e-mail message because you have registered a contact form at <a href="http://www.freeformz.net">www.freeformz.net</a>
 </body>
 </html>
