Clean, naked layout more naked

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -28,6 +28,10 @@ textarea {
 	color: #999999;
 }
 
+.naked {
+	background: transparent;
+}
+
 .required::after {
 	content: ' *';
 	color: #b94a48;
