--- a/views/layout/naked.twig
+++ b/views/layout/naked.twig
@@ -20,7 +20,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="naked">
     {% block header %}
     {% endblock %}
     {% block content %}{% endblock %}
