feat(layout): date modified

--- a/views/layout/base.twig
+++ b/views/layout/base.twig
@@ -45,10 +45,10 @@
             <footer>
                 <div class="page-header"></div>
                 <div class="pull-right">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="pixelcookers" data-related="moalmeyer" data-hashtags="pixelcookers">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="moalmeyer" data-related="moalmeyer" data-hashtags="moalmeyer">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                     <div class="fb-like" style="top: -2px" data-href="http://www.freeformz.net" data-send="true" data-layout="button_count" data-width="150" data-show-faces="false"></div>
                 </div>
-                <p>&copy; <a href="http://www.pixel-cookers.com">Pixel Cookers</a> and <a href="http://www.ludovicmeyer.com">Ludovic Meyer</a> 2013</p>
+                <p>&copy; <a href="http://www.ludovicmeyer.com">Ludovic Meyer</a> {{ "now"|date("Y") }}</p>
             </footer>
         </div>
     {% endblock %}
